<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/holo_red_light"
        app:cardCornerRadius="@dimen/cardView_corner_radius"
        app:contentPadding="@dimen/preferred_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/left_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_delete"
                android:drawableLeft="@drawable/ic_delete"
                android:drawablePadding="@dimen/preferred_margin"
                android:gravity="center_vertical"
                android:text="@string/label_delete"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/right_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_delete"
                android:drawableRight="@drawable/ic_delete"
                android:drawablePadding="@dimen/preferred_margin"
                android:gravity="center_vertical|end"
                android:text="@string/label_delete"
                android:textColor="?android:textColorPrimaryInverse" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/item_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/cardView_corner_radius">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/preferred_padding">

            <androidx.cardview.widget.CardView
                android:id="@+id/pic_card_view"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="@dimen/preferred_margin"
                android:layout_marginRight="@dimen/preferred_margin"
                app:cardCornerRadius="@dimen/cardView_corner_radius"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/pic_image_view"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/item_picture_desc"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_inventory" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/name_text_view"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/pic_card_view"
                android:layout_toRightOf="@id/pic_card_view"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Name will probably be a line and not two or three" />

            <TextView
                android:id="@+id/desc_text_view"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_text_view"
                android:layout_marginEnd="@dimen/preferred_margin"
                android:layout_marginRight="@dimen/preferred_margin"
                android:layout_toStartOf="@id/sell_button"
                android:layout_toLeftOf="@id/sell_button"
                android:layout_toEndOf="@id/pic_card_view"
                android:layout_toRightOf="@id/pic_card_view"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="Description will probably be the longest among them all so we should also test that to see its behavior" />

            <Button
                android:id="@+id/sell_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_text_view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/preferred_margin"
                android:layout_marginRight="@dimen/preferred_margin"
                android:text="@string/label_sell" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sell_button"
                android:layout_toEndOf="@id/pic_card_view"
                android:layout_toRightOf="@id/pic_card_view">

                <TextView
                    android:id="@+id/price_text_view"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    tools:text="Price should be so long to test what will happen" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="Quantity is so long also because whe are just testing right now" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>